<resources>
    <string name="app_name">SMDAssignment1</string>
    <string name="sender_details">SENDER\nDETAILS</string>
    <string name="receiver_details">RECEIVER\nDETAILS</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Contact\nInformation</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="next">NEXT</string>
    <string name="review_info">Review Information</string>

    <string name="name_header">Name</string>
    <string name="country_header">Country</string>
    <string name="address_header">Address</string>
    <string name="contact_header">Contact Info</string>

</resources>