<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SenderInfoFormActivity">

    <TextView
        android:id="@+id/tvReceiverDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_header"
        android:padding="12dp"
        android:text="@string/receiver_details"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_marginTop="-8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etReceiverEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@android:color/black"
        android:textColorHint="@color/light_gray"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_input_field"
        app:layout_constraintTop_toBottomOf="@id/tvReceiverDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/etReceiverName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@android:color/black"
        android:textColorHint="@color/light_gray"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_input_field"
        app:layout_constraintTop_toBottomOf="@id/etReceiverEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/etReceiverContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textColor="@android:color/black"
        android:textColorHint="@color/light_gray"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_input_field"
        app:layout_constraintTop_toBottomOf="@id/etReceiverName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- Country Input -->
    <EditText
        android:id="@+id/etReceiverCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:textColor="@android:color/black"
        android:textColorHint="@color/light_gray"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_input_field"
        app:layout_constraintTop_toBottomOf="@id/etReceiverContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- Address Input -->
    <EditText
        android:id="@+id/etReceiverAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textColor="@android:color/black"
        android:textColorHint="@color/light_gray"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_input_field"
        app:layout_constraintTop_toBottomOf="@id/etReceiverCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- Next Button -->
    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etReceiverAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
