<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ReviewInfoActivity">

    <TextView
        android:id="@+id/tvReviewInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_header"
        android:padding="12dp"
        android:text="@string/review_info"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_marginTop="-8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvReviewInformation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_header"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tvCountryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_header"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tvAddressHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_header"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tvContactHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_header"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tvSenderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tvSenderCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tvSenderAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tvSenderContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_margin="16dp"/>

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/arrow_icon"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical"
            android:layout_columnSpan="4"/>

        <TextView
            android:id="@+id/tvReceiverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tvReceiverCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tvReceiverAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tvReceiverContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_margin="16dp"/>
    </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
